Whoops (fixing spacing bug in top bar)

--- a/public/stylesheets/bizzle-classes.css
+++ b/public/stylesheets/bizzle-classes.css
@@ -131,11 +131,11 @@
 }
 
 .username_box {
-  width: 60%;
+  width: 55%;
 }
 
 .login_button {
-  width: 30%;
+  width: 32%;
 }
 
 .topbar .btn {
